--- a/web/cont.html
+++ b/web/cont.html
@@ -60,7 +60,7 @@
                 </symbol>
               </svg>
               
-            <div class="container">
+              <div class="container">
                 <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
                   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                     <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
@@ -70,13 +70,27 @@
                   <ul class="nav nav-pills">
                     <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Главная</a></li>
                     <li class="nav-item"><a href="history.html" class="nav-link">История</a></li>
-                
+                    <li class="nav-item"><a href="karta.html" class="nav-link">Карта</a></li>
                     <li class="nav-item"><a href="sign.html" class="nav-link">Регистрация</a></li>
                     <li class="nav-item"><a href="cont.html" class="nav-link">Контакты</a></li>
                   </ul>
                 </header>
               </div>
               </div>
+              <div class="container">
+               <!-- <footer class="py-3 my-4">
+                  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Главная</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">История</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Карта</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Регистрация</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Контакты</a></li>
+                  </ul>
+                  <p class="text-center text-muted">&copy; 2021 Kibero, Inc</p>
+                </footer> -->
+              </div>
+              </div>
     </div>
+    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
